--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -6,7 +6,7 @@
     <title>관리자 페이지</title>
     <link rel="icon" href="./images/KBU_LOGO.png" type="image/x-icon" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://www.google.com/recaptcha/api.js?render=6LdvwmMrAAAAAKdeVxifl0DblbAGGTXMtLA4ypfQ"></script>
+    <script src="https://www.google.com/recaptcha/api.js?render="></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
